--- a/package.json
+++ b/package.json
@@ -1,3 +1,12 @@
-"scripts": {
-  "start": "node server.js"
+{
+  "name": "chrome-proxy-browser",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "axios": "^1.7.2"
+  }
 }
