--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chrome-proxy-browser",
+  "name": "proxy-server",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
@@ -7,6 +7,6 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.7.2"
+    "node-fetch": "^2.6.7"
   }
 }
